<resources>
    <string name="mdtp_ok">تایید</string>
    <string name="mdtp_cancel">انصراف</string>
    <string name="app_name">Dpa_PubProc</string>
    <string name="NULL"></string>
    <string name="UserName">نام کاربری</string>
    <string name="Home">خانه</string>
    <string name="Messaging">پیام ها</string>
    <string name="AddPost">درج آگهی</string>
    <string name="Profile">پروفایل</string>
    <string name="Search">جستجو</string>
    <string name="mnuProfile">پروفایل</string>
    <string name="mnuLaw">قوانین و مقررات</string>
    <string name="mnuAccount">حساب من</string>
    <string name="mnuAdvertisment">آکهی های من</string>
    <string name="mnuBids">پیشنهاد های من</string>
    <string name="mnuSettings">تنظیمات</string>
    <string name="mnuAboutUs">درباره ما</string>
    <string name="mnuQuickGuide">راهنما</string>
    <string name="mnuMyStuff">ابزار من</string>
    <string name="mnuGeneral">عمومی</string>
    <string name="mnuDPA">داده پردازی</string>
    <string name="messOperationSucceed">اطلاعات با موفقیت ثبت شد</string>
    <string name="messAddAdvSucceed">اطلاعات با موفقیت ثبت شد و پس از تایید در رستوک نمایش داده خواهد شد. این کار ممکن است چند ساعت طول بکشد.</string>
    <string name="messPleaseWait">لطفا منتظر بمانید</string>
    <string name="messOperationFailed">بروز خطا در دریافت اطلاعات</string>
    <string name="messOperationFailedOnBuy">بروز خطا در انجام تراکنش</string>
    <string name="messUserNameIsInvalid">نام کاربری اشتباه می باشد</string>
    <string name="messPasswordIsInvalid">کلمه عبور با نام کاربری همخوانی ندارد</string>
    <string name="messPasswordNoConfirm">کلمه عبور با تایید آن همخوانی ندارد</string>
    <string name="messDoYouWantToExit">آیا برای خروج اطمینان دارید؟</string>
    <string name="messConnectionInProgress">در حال بررسی اتصال</string>
    <string name="messNoInternetConnection">اتصال به اینترنت برقرار نمی باشد</string>
    <string name="messEmailNotExists">پست الکترونیکی وارد شده در سیستم وجود ندارد</string>
    <string name="messInfoSent">اطلاعات کاربری شما برای شما ارسال گردید</string>
    <string name="messSelectSex">جنسیت خود را مشخص کنید</string>
    <string name="messSelectUserName">نام و نام خانوادگی را وارد نمایید</string>
    <string name="messSelectUserOnlyName">نام را وارد نمایید</string>
    <string name="messSelectEmail">پست الکترونیکی خود را وارد نمایید</string>
    <string name="messSelectPassword">کلمه عبور را وارد نمایید</string>
    <string name="messSelectMainGoal">هدف اصلی خود را انتخاب نمایید</string>
    <string name="messEmailIsInvalid">پست الکترونیکی وارد شده نا معتبر است</string>
    <string name="messUpdatingProgress">در حال بروز رسانی</string>
    <string name="messSendingProgress">در حال ارسال</string>
    <string name="messAreYouSure">آیا اطمینان دارید؟</string>
    <string name="messAreYouSureToDelete">آیا برای حذف اطمینان دارید؟</string>
    <string name="messWelcome">خوش آمدید</string>
    <string name="JustNow"> همین حالا	</string>
    <string name="SecondsAgo"> s			</string>
    <string name="MinsAgo"> m			</string>
    <string name="HrsAgo"> h			</string>
    <string name="DaysAgo"> d			</string>
    <string name="btnProducts">کالا</string>
    <string name="btnServices">خدمات</string>
    <string name="btnIdo">انجام میدم</string>
    <string name="btnViewAll">مشاهده همه</string>
    <string name="lblTitle">عنوان</string>
    <string name="lblSearch">جستجو</string>
    <string name="lblFilter">فیلتر</string>
    <string name="lblCategory">دسته بندی</string>
    <string name="lblLocation">شهر</string>
    <string name="lblUrgent">فوری</string>
    <string name="lblSort">مرتب سازی</string>
    <string name="lblSignIn">ورود</string>
    <string name="lblSignOut">خروج</string>
    <string name="lblAdvertisment">آگهی</string>
    <string name="lblBids">پیشنهادات</string>
    <string name="lblSubmitBids">ثبت پیشنهاد</string>
    <string name="lblEmail">پست الکترونیک</string>
    <string name="lblEmailOpt">پست الکترونیک (اختیاری)</string>
    <string name="lblPassword">کلمه عبور</string>
    <string name="lblName">نام و نام خانوادگی</string>
    <string name="lblMobile">تلفن همراه</string>
    <string name="lblRegisterDate">تاریخ ثبت نام</string>
    <string name="lblUserCategory">مهارت ها</string>
    <string name="lblResume">رزومه</string>
    <string name="lblDesc">توضیحات</string>
    <string name="lblComment">نظرات</string>
    <string name="lblProjects">پروژه ها</string>
    <string name="lblEditProfile">ویرایش پروفایل</string>
    <string name="lblEditPassword">تغییر کلمه عبور</string>
    <string name="lblAboutMe">درباره من</string>
    <string name="lblWorkSample">نمونه کار</string>
    <string name="lblSend">ارسال</string>
    <string name="txtOk">تایید</string>
    <string name="txtSubmit">ثبت</string>
    <string name="lblConfirmPassword">تایید کلمه عبور</string>
    <string name="lblSignup">ثبت نام</string>
    <string name="lblSignupBefore">قبلا ثبت نام کرده اید؟</string>
    <string name="txtNotRegisterYet">هنوز ثبت نام نکرده اید؟</string>
    <string name="txtSignUp">ثبت نام کنید</string>
    <string name="txtForgetPassword">کلمه عبور خود را فراموش کرده اید؟</string>
    <string name="txtRecoverpass">بازیابی کلمه عبور</string>
    <string name="TxtTypeComment">نظر خود را بنویسید...	</string>
    <string name="txtRegisterFrom">عضویت از </string>
    <string name="txtActiveIn">فعال در زمینه </string>
    <string name="txtRetry">تلاش مجدد</string>
    <string name="txtUserName">نام کاربری</string>
    <string name="lblBidTime">زمان پیشنهادی</string>
    <string name="lblBidBudget">مبلغ پیشنهادی (تومان)</string>
    <string name="lblBidEarnest">مبلغ بیعانه (تومان)</string>
    <string name="lblAtachment">فایل ضمیمه</string>
    <string name="lblGallry">گالری</string>
    <string name="camera">دوربین</string>
    <string name="lblHours">ساعت</string>
    <string name="lblMins">دقیقه</string>
    <string name="lblDay">روز</string>
    <string name="lblWeek">هفته</string>
    <string name="lblMonth">ماه</string>
    <string name="txtChoosePic">انتخاب تصویر</string>
    <string name="lblDelete">حذف تصویر</string>
    <string name="messAreYouSureToExit">در صورت خروج تغییرات ثبت نخواهد شد</string>
    <string name="txtBidSuggest">"مبلغ پیشنهادی: "</string>
    <string-array name="bidtime_arrays">
        <item>ساعت</item>
        <item>روز</item>
        <item>هفته</item>
        <item>ماه</item>
    </string-array>
    <string name="lblChoose">انتخاب</string>
    <string name="txtNewBid">پیشنهاد جدید</string>
    <string name="messMessageInConfirmProcess">نظر شما در سامانه ثبت شد و پس از بررسی نمایش داده خواهد شد</string>
    <string name="lblGustUser">کاربر مهمان</string>
    <string name="lblChooseAdvertisment">انتخاب نوع آگهی</string>
    <string name="lblAdvTitle">عنوان آگهی</string>
    <string name="lblFromPrice">شروع قیمت از (تومان)</string>
    <string name="lblToPrice">تا قیمت (تومان)</string>
    <string name="lblTel">تلفن ثابت :</string>
    <string name="txtAcceptTerms">شرایط و قوانین را مطالعه کرده و قبول دارم</string>
    <string name="lblInsertAdv">ثبت آکهی</string>
    <string name="lblFinalAdv">ثبت نهایی آگهی</string>
    <string name="lblNotification">اعلان ها</string>
    <string name="lblChat">گفتگوها</string>
    <string name="lblBidCounts">"پیشنهاد ها: "</string>
    <string name="action_settings">Settings</string>
    <string name="lblProductAndServices">کالا و خدمات</string>
    <string name="lblIDo">انجام می دم</string>
    <string name="lblUsers">کاربران</string>
    <string name="lblSortOn">مرتب سازی بر اساس</string>
    <string name="lblSortTitle">جدیدترین</string>
    <string name="lblUnFilter">حذف فیلتر</string>
    <string name="messTempDataSaved">اطلاعات به صورت موقت ذخیره گردید</string>
    <string name="lblUserTitle">نام یا عنوان</string>
    <string name="messSaveChanges">آیا مایل به ذخیره تغییرات هستید</string>
    <string name="lblPercent">درصد کمیسیون</string>
    <string name="lblBidCount">تعداد پیشنهاد</string>
    <string name="lblExprieTime">مهلت استفاده</string>
    <string name="lblCount">عدد</string>
    <string name="txtPercent">درصد</string>
    <string name="lblToman">تومان</string>
    <string name="txtBuyPackage">خرید بسته جدید</string>
    <string name="lblConfrirm">تایید</string>
    <string name="lblChangePassword">تغییر کلمه عبور</string>
    <string name="lblNewPass">کلمه عبور جدید</string>
    <string name="lblOldPass">کلمه عبور فعلی</string>
    <string name="messOldPasswordNotValid">کلمه عبور قبلی وارد شده صحیح نمی باشد</string>
    <string name="lblEmailOrMobile">پست الکترونیک یا تلفن همراه</string>
    <string name="lblSendRecycleCode">ارسال کد بازیابی</string>
    <string name="messEmailOrMobileIsNotValid">پست الکترونیک یا موبایل وارد شده صحیح نمی باشد</string>
    <string name="messMobileNotExists">موبایل وارد شده وجود ندارد</string>
    <string name="lblRecycleCode">کد بازیابی</string>
    <string name="lblCheckRecycleCode">بررسی کد بازیابی</string>
    <string name="lblRecycleCodeNotRecived">هنوز کدی دریافت نکرده اید؟</string>
    <string name="lblRCodeNotValid">کد بازیابی وارد شده معتبر نمی باشد</string>
    <string name="lblProjectName">مشاهده پروژه</string>
    <string name="messYouAreNotSignedin">برای استفاده از این بخش باید وارد پروفایل خود شوید</string>
    <string name="lblEditBid">ویرایش پیشنهاد</string>
    <string name="messEmailOrUserNameExists">نام کاربری یا پست الکترونیکی تکراری می باشد</string>
    <string name="messEmailExists">پست الکترونیکی تکراری می باشد</string>
    <string name="txtCancel">انصراف</string>
    <string name="messWorkSampleImageRequired">ارسال تصویر نمونه کار الزامی می باشد</string>
    <string name="messPlzWaitToUpload">لطفا تا بارگذاری تصاویر ضمیمه منتظر بمانید</string>
    <string name="messTitleRequired">عنوان آگهی را وارد نمایید</string>
    <string name="messCategoryRequired">تعیین دسته بندی الزامی می باشد</string>
    <string name="messPriceRequired">نعیین بازه قیمت الزامی می باشد</string>
    <string name="messPriceRangIncorrect">بازه قیمتی تعیین شده صحیح نمی باشد</string>
    <string name="messLocationRequired">تعیین شهر الزامی می باشد</string>
    <string name="lblRemove">حذف</string>
    <string name="lblSignOutFromApp">خروج از حساب کاربری</string>
    <string name="lblEdit">ویرایش</string>
    <string name="lblEditAdv">ویرایش آگهی</string>
    <string name="lblUnChoose">لغو انتخاب</string>
    <string name="messHasAnOtherAcceptedBid">برای این پروژه پشنهاد دیگری انتخاب شده است</string>
    <string name="lblAccepted">" انتخاب شد."</string>
    <string name="messBidAcceptedNotify">"پیشنهاد شما برای آگهی "</string>
    <string name="lblFinalConfirm">تایید نهایی</string>
    <string name="lblFinalConfirmed">ثبت نهایی شد</string>
    <string name="messBidFinalConfirmed">"پیشنهاد برای آگهی "</string>
    <string name="txtBidConfirmed">تایید نهایی پشنهاد</string>
    <string name="txtBidAccepted">انتخاب پیشنهاد</string>
    <string name="lblPay">پرداخت</string>
    <string name="lblGotoBank">ورود به صفحه پرداخت</string>
    <string name="txtBuyText">خرید شما به شرح زیر می باشد</string>
    <string name="messBuySucceed">پرداخت با موفقیت انجام شد</string>
    <string name="messBidEranestPay">"بیعانه جهت آگهی "</string>
    <string name="lblReadyToFinish">آماده تحویل</string>
    <string name="lblBidFinished">تحویل پروژه</string>
    <string name="lblEarnestPayed">واریز بیعانه</string>
    <string name="lblProject">"پروژه "</string>
    <string name="lblProjectFinished">" آماده تحویل می باشد"</string>
    <string name="messEarnestOnProject">"بیعانه جهت آگهی "</string>
    <string name="messFinalPayOnProject">"پرداخت نهایی بابت آگهی "</string>
    <string name="lblActiveIn2">زمینه فعالیت</string>
    <string name="lblDeleteItem">حذف</string>
    <string name="lblDeleteAdv">حذف آگهی</string>
    <string name="lblBuyDate">تاریخ خرید</string>
    <string name="lblRefCode">کد رهگیری</string>
    <string name="lblBuyPrice">مبلغ</string>
</resources>