<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/MainLayout"
    android:background="@color/OKColor">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:id="@+id/mcMenuLayout">

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="40sp"
            android:layout_height="40sp"
            android:id="@+id/BackBtn"
            android:src="@drawable/backbtn"
            android:layout_alignParentEnd="false"
            android:scaleType="fitCenter"
            android:layout_marginRight="5sp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:padding="8sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/mcMenuLayout">

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/abdImgIcon"
            android:layout_width="100sp"
            android:layout_height="100sp"
            android:src="@drawable/response_success"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30sp"
            android:scaleType="fitCenter"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:id="@+id/abdTxtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:gravity="right|center"
            android:text="@string/messBuySucceed"
            android:textColor="@color/light_text"
            android:layout_marginTop="15sp"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:id="@+id/abdTxtDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:gravity="right|center"
            android:text="@string/lblDesc"
            android:textColor="@color/light_text"
            android:layout_marginTop="30sp"
            android:layout_gravity="center_horizontal"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginTop="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/abtTxtBuyDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="13sp"
                    android:textStyle="bold"
                    android:gravity="right|center"
                    android:textColor="@color/light_text"
                    android:layout_marginTop="10sp"
                    android:layout_gravity="center_horizontal"/>

                <TextView
                    android:id="@+id/abdTxtRefID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="13sp"
                    android:textStyle="bold"
                    android:gravity="right|center"
                    android:textColor="@color/light_text"
                    android:layout_marginTop="10sp"
                    android:layout_gravity="center_horizontal"/>

                <TextView
                    android:id="@+id/abdTxtPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="13sp"
                    android:textStyle="bold"
                    android:gravity="right|center"
                    android:textColor="@color/light_text"
                    android:layout_marginTop="10sp"
                    android:layout_gravity="center_horizontal"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_weight="2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="13sp"
                    android:gravity="right|center"
                    android:text="@string/lblBuyDate"
                    android:textColor="@color/light_text"
                    android:layout_marginTop="10sp"
                    android:layout_gravity="center_horizontal"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="13sp"
                    android:gravity="right|center"
                    android:text="@string/lblRefCode"
                    android:textColor="@color/light_text"
                    android:layout_marginTop="10sp"
                    android:layout_gravity="center_horizontal"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="13sp"
                    android:gravity="right|center"
                    android:text="@string/lblBuyPrice"
                    android:textColor="@color/light_text"
                    android:layout_marginTop="10sp"
                    android:layout_gravity="center_horizontal"/>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/abdBtnOk"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="35sp"
        android:layout_width="150sp"
        android:layout_height="40sp"
        android:text="@string/txtOk"
        android:gravity="center"
        android:textSize="16sp"
        android:textColor="@color/OKColor"
        android:background="@drawable/backbtnrounded_light"
        android:layout_gravity="center"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>
